--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -11,105 +11,42 @@
   justify-content: center;
 
   .modal-content-box {
-    display: flex;
-    width: 500px;
-    height: 680px;
-    padding: 30px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-shrink: 0;
-    border-radius: 24px;
-    border: 1px solid var(--White-05, rgba(255, 255, 255, 0.05));
-    background: var(--Grey-900, #181818);
-    // max-width: 400px;
-    // width: 100%;
-    // background-color: #222;
-    // border-radius: 16px;
-    // border: 1px solid #222;
-    // background: #1a1a1a;
-    // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
+    max-width: 400px;
+    width: 100%;
+    background-color: #222;
+    border-radius: 16px;
+    border: 1px solid #222;
+    background: #1a1a1a;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
     .modal-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      align-self: stretch;
-
-      // padding: 17px;
-      // text-align: center;
-      // position: relative;
-      // color: var(--White, #fff);
-      // font-family: Pretendard700;
-      // font-size: 20px;
-      // font-style: normal;
-      // line-height: 30px;
-      .modal-title {
-        color: var(--White, #fff);
-        font-family: Pretendard700;
-        font-size: 20px;
-        font-style: normal;
-        line-height: 30px; /* 150% */
-        font {
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-        }
+      padding: 17px;
+      text-align: center;
+      position: relative;
+    }
+    .modal-title {
+      color: #f1f1f1;
+      font-size: 20px;
+      font-family: Pretendard600;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
       }
-
-      .modal-close {
-        // position: absolute;
-        width: 26px;
-        height: 26px;
-        aspect-ratio: 1/1;
-        // margin-left: auto;
-        // right: 17px;
-        // top: 17px;
-        cursor: pointer;
-      }
+    }
+    .modal-close {
+      // position: absolute;
+      margin-left: auto;
+      right: 17px;
+      top: 17px;
+      cursor: pointer;
     }
     .modal-content {
-      // padding: 20px;
-      // padding-top: 0px;
-      margin: 16px 0px 16px 0px;
-      width: 100%;
-      height: auto;
-      overflow-y: scroll;
-      color: #fff;
-      font-family: Pretendard400;
-      font-size: 14px;
-      font-style: normal;
-      line-height: 22px; /* 157.143% */
-      &::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera용 */
-      }
-    }
-    .modal-btn {
-      display: flex;
-      padding: 12px 16px;
-      align-items: center;
-      gap: 12px;
-      align-self: stretch;
-      border-radius: 12px;
-      border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
-      background: var(--White-05, rgba(255, 255, 255, 0.05));
-
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 1;
-      align-self: stretch;
-
-      overflow: hidden;
-      color: var(--White, #fff);
-      text-align: center;
-      text-overflow: ellipsis;
-      font-family: Pretendard400;
-      font-size: 14px;
-      font-style: normal;
-      line-height: 22px; /* 157.143% */
+      padding: 20px;
+      padding-top: 0px;
     }
   }
 }
