--- a/src/components/create/MelodyMaker.scss
+++ b/src/components/create/MelodyMaker.scss
@@ -95,8 +95,10 @@
     gap: 10px;
     align-self: stretch;
     border-radius: 12px;
-    background: var(--Primary_Dark, #3a9de3);
-    color: var(--White, #fff);
+    // background: var(--Primary_Dark, #3a9de3);
+    background-color: #cf0;
+    // color: var(--White, #fff);
+    color: #000;
     text-align: center;
     font-family: Pretendard700;
     font-size: 16px;
@@ -134,7 +136,8 @@
       gap: 10px;
       align-self: stretch;
       border-radius: 12px;
-      background: #24333e !important;
+      // background: #24333e !important;
+      background-color: #000 !important;
       color: var(--Grey-600, #767676) !important;
       text-align: center;
       font-family: Pretendard700;
