--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -48,7 +48,8 @@
       }
     }
     .sub-banner__required-icon {
-      color: var(--Primary, #48b3ff);
+      // color: var(--Primary, #48b3ff);
+      color: #cf0;
       text-align: center;
       font-family: Pretendard700;
       font-size: 16px;
