--- a/src/components/unit/RemainCountButton.scss
+++ b/src/components/unit/RemainCountButton.scss
@@ -5,7 +5,8 @@
   font-style: normal;
   line-height: 30px;
   span {
-    color: #48b3ff;
+    // color: #48b3ff;
+    color: #cf0;
     font-family: Pretendard700;
     font-size: 20px;
     font-style: normal;
