--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -1,5 +1,3 @@
-// pages/ChatBot.scss
-
 // 색상 변수 설정 (필요에 따라 커스터마이징 가능)
 $background-dark: #0b0b0c;
 $foreground: #282828;
@@ -9,30 +7,31 @@ $text-color: #ffffff;
 $shadow-color: rgba(0, 0, 0, 0.3);
 
 .chatbot__background {
+  // display: flex;
+  // max-width: 1220px;
+  // height: 1006px;
+  // width: 100%;
+  // height: 100%;
+  // padding: 40px 30px;
+  // flex-direction: column;
+  // gap: 24px;
+  // align-items: flex-start;
+  // flex: 1 0 0;
   display: flex;
-  max-width: 1230px;
-  width: 100%;
-  height: 100%;
   padding: 40px 30px;
   flex-direction: column;
-  gap: 30px;
   align-items: flex-start;
-  flex: 1 0;
+  gap: 24px;
+  flex: 1 0 0;
+  align-self: stretch;
+
   .chatbot {
-    // height: 700px;
-    // width: 100%;
-    // // max-width: 600px;
-    // // background-color: $foreground;
-    // // border-radius: 12px;
-    // // box-shadow: 0 4px 12px $shadow-color;
-    // display: flex;
-    // flex-direction: column;
-    // overflow: hidden;
-    // // min-height: 800px;
-    // padding: 16px;
-    // border-radius: 12px;
-    // border: 1px solid #222;
+    // flex: 1 0 0;
+    // align-self: stretch;
+    // border-radius: 20px;
+    // border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
     display: flex;
+    height: 100%;
     padding: 24px 30px;
     flex-direction: column;
     justify-content: space-between;
@@ -41,41 +40,44 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     align-self: stretch;
     border-radius: 20px;
     border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
-    &__header {
-      padding: 20px;
-      // background-color: $background-dark;
-      text-align: center;
-      h2 {
-        margin: 0;
-        font-weight: 600;
-        color: $text-color;
-        text-align: left;
-        color: #cf0;
-        font-family: Pretendard400;
-        font-size: 18px;
-        font {
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-        }
-      }
-    }
+    // &__header {
+    //   padding: 20px;
+    //   // background-color: $background-dark;
+    //   text-align: center;
+    //   h2 {
+    //     margin: 0;
+    //     font-weight: 600;
+    //     color: $text-color;
+    //     text-align: left;
+    //     color: #cf0;
+    //     font-family: Pretendard400;
+    //     font-size: 18px;
+    //     font {
+    //       font-family: inherit !important;
+    //       font-size: inherit !important;
+    //       font-weight: inherit !important;
+    //       line-height: inherit !important;
+    //       font-style: inherit !important;
+    //       color: inherit !important;
+    //       letter-spacing: inherit !important;
+    //     }
+    //   }
+    // }
 
     &__messages {
-      width: 100%;
-      // background: url('../assets/images/chat-bot/chat-mob-bg.png') no-repeat left bottom;
-      flex: 1;
-      padding: 20px;
-      // background-color: $foreground;
       display: flex;
+      flex: 1;
       flex-direction: column;
-      gap: 10px;
+      align-items: flex-start;
+      gap: 12px;
+      align-self: stretch;
       overflow-y: auto;
-      max-height: 500px;
+      min-height: 0;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+      &::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Edge */
+      }
       font {
         font-family: inherit !important;
         font-size: inherit !important;
@@ -86,12 +88,12 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         letter-spacing: inherit !important;
       }
       .message {
-        max-width: 100%;
-        padding: 12px;
-        border-radius: 10px;
-        font-size: 14px;
-        word-wrap: break-word;
-        transition: background-color 0.3s ease;
+        // max-width: 100%;
+        // padding: 12px;
+        // border-radius: 10px;
+        // font-size: 14px;
+        // word-wrap: break-word;
+        // transition: background-color 0.3s ease;
         font {
           font-family: inherit !important;
           font-size: inherit !important;
@@ -105,26 +107,37 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           align-self: flex-end;
           // background-color: $primary;
           // color: $text-color;
-          padding: 0px;
           .message__content {
-            display: flex;
-            flex-direction: row-reverse;
-            width: 100%;
-            align-items: center;
-            gap: 8px;
-            img {
-              width: 40px;
-              height: 40px;
-              border-radius: 100%;
-            }
+            // display: flex;
+            // flex-direction: row-reverse;
+            // width: 100%;
+            // align-items: center;
+            // gap: 8px;
+
+            // img {
+            //   width: 40px;
+            //   height: 40px;
+            //   border-radius: 100%;
+            // }
             .message__content--text {
-              border-radius: 8px;
-              background: #cf0;
-              color: #1a1a1a;
+              // border-radius: 8px;
+              // background: #cf0;
+              // color: #1a1a1a;
+              // font-family: Pretendard400;
+              // font-size: 14px;
+              // padding: 12px;
+              display: flex;
+              padding: 12px 20px;
+              align-items: flex-start;
+              gap: 10px;
+              border-radius: 16px 0px 16px 16px;
+              background: var(--White-10, rgba(255, 255, 255, 0.1));
+              white-space: break-spaces;
+              color: #fff;
               font-family: Pretendard400;
               font-size: 14px;
-              padding: 12px;
-              white-space: break-spaces;
+              font-style: normal;
+              line-height: 22px;
               font {
                 font-family: inherit !important;
                 font-size: inherit !important;
@@ -143,7 +156,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           // background-color: rgba(255, 255, 255, 0.1);
           // border: 1px solid rgba(255, 255, 255, 0.2);
           // color: $text-color;
-          padding: 0px;
           .message__content {
             display: flex;
             align-items: flex-start;
@@ -179,8 +191,9 @@ $shadow-color: rgba(0, 0, 0, 0.3);
               align-items: flex-start;
               gap: 10px;
               border-radius: 0px 16px 16px 16px;
-              background: #22445c;
-              color: #fff;
+              background: #cf0;
+              opacity: 0.5;
+              color: #000;
               font-family: Pretendard400;
               font-size: 14px;
               font-style: normal;
@@ -201,13 +214,25 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     }
 
     &__input {
+      // display: flex;
+      // padding: 12px;
+      // background-color: $background-dark;
+      // align-items: center;
+      // border-radius: 12px;
+      // border: 1px solid #cf0;
+      // background: #0b0b0c;
       display: flex;
-      padding: 12px;
-      background-color: $background-dark;
+      height: 54px;
+      padding: 12px 20px;
+      justify-content: space-between;
       align-items: center;
-      border-radius: 12px;
-      border: 1px solid #cf0;
-      background: #0b0b0c;
+      align-self: stretch;
+
+      color: var(--Grey-600, #767676);
+      font-family: Pretendard400;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 22px;
       font {
         font-family: inherit !important;
         font-size: inherit !important;
@@ -229,19 +254,59 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       }
     }
     &__textarea {
-      padding: 12px;
-      transition: 0.2s all;
-      border: 1px solid #cf0;
+      display: flex;
+      width: 100%;
+      height: 54px;
+      padding: 12px 20px;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+
       border-radius: 12px;
+      border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+      background: var(--Black-10, rgba(0, 0, 0, 0.1));
+      backdrop-filter: blur(20px);
+      .send-icon {
+        transition: opacity 0.2s ease;
+        &.active {
+          opacity: 1;
+          cursor: pointer;
+        }
+        &.disabled {
+          opacity: 0.3;
+          cursor: default;
+        }
+      }
 
       textarea {
         resize: none;
-        color: #f1f1f1;
+        width: 100%;
+        color: #fff;
         font-family: Pretendard400;
         font-size: 14px;
-        all: unset;
-        width: 100%;
-        padding: 8px 0 0;
+        background: transparent;
+        border: none;
+        outline: none;
+
+        height: 100%; /* 부모와 동일한 높이 */
+        line-height: 30px; /* 적절히 조정 */
+        padding: 0; /* 상하 패딩 제거 */
+        margin: 0;
+        display: flex;
+        align-items: center; // 일부 브라우저는 무시할 수 있음
+
+        overflow: hidden;
+        scrollbar-width: none; /* Firefox */
+        &::-webkit-scrollbar {
+          display: none; /* Chrome, Safari */
+        }
+        &::placeholder {
+          color: #767676;
+          font-family: Pretendard400;
+          font-size: 14px;
+          line-height: 30px;
+        }
+
         font {
           font-family: inherit !important;
           font-size: inherit !important;
@@ -260,49 +325,124 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       }
     }
 
-    &__button {
-      font {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
-      width: 100px;
-      height: 30px;
-      background: #cf0;
-      transition: 0.2s;
-      color: #1a1a1a;
-      font-family: Pretendard600;
-      font-size: 12px;
-      font-style: normal;
-      line-height: normal;
-      border-radius: 8px;
+    // &__button {
+    //   font {
+    //     font-family: inherit !important;
+    //     font-size: inherit !important;
+    //     font-weight: inherit !important;
+    //     line-height: inherit !important;
+    //     font-style: inherit !important;
+    //     color: inherit !important;
+    //     letter-spacing: inherit !important;
+    //   }
+    //   width: 100px;
+    //   height: 30px;
+    //   background: #cf0;
+    //   transition: 0.2s;
+    //   color: #1a1a1a;
+    //   font-family: Pretendard600;
+    //   font-size: 12px;
+    //   font-style: normal;
+    //   line-height: normal;
+    //   border-radius: 8px;
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: center;
+    //   position: relative;
+    //   margin-top: 16px;
+    //   margin-left: auto;
+    //   transition: 0.2s all;
+    //   top: 0px;
+    //   &::before {
+    //     content: '';
+    //     position: absolute;
+    //     left: 0;
+    //     top: 4px;
+    //     width: calc(100% - 2px);
+    //     transition: 0.2s all;
+    //     border-radius: 8px;
+    //     height: 29px;
+    //     border: 1px solid #cf0;
+    //   }
+    //   &:hover {
+    //     top: 4px;
+    //     &::before {
+    //       top: 0;
+    //     }
+    //   }
+    // }
+  }
+
+  .create__btn {
+    width: 100%;
+    height: auto;
+    .create__get-started--button {
+      width: 100%;
       display: flex;
-      align-items: center;
+      padding: 12px 20px;
       justify-content: center;
-      position: relative;
-      margin-top: 16px;
-      margin-left: auto;
-      transition: 0.2s all;
-      top: 0px;
-      &::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 4px;
-        width: calc(100% - 2px);
-        transition: 0.2s all;
-        border-radius: 8px;
-        height: 29px;
-        border: 1px solid #cf0;
-      }
-      &:hover {
-        top: 4px;
-        &::before {
-          top: 0;
+      align-items: center;
+      gap: 10px;
+      align-self: stretch;
+      border-radius: 12px;
+      // background: var(--Primary_Dark, #3a9de3);
+      background-color: #cf0;
+      // color: var(--White, #fff);
+      color: #000;
+      text-align: center;
+      font-family: Pretendard700;
+      font-size: 16px;
+      font-style: normal;
+      line-height: 24px;
+
+      // &:hover {
+      //   transform: translateY(5px);
+      //   &::after {
+      //     transform: translateY(0px);
+      //   }
+      // }
+
+      // &::after {
+      //   content: '';
+      //   position: absolute;
+      //   width: 100%;
+      //   height: 100%;
+      //   box-sizing: border-box;
+      //   top: 0;
+      //   left: 0;
+      //   transform: translateY(5px);
+      //   border-radius: 12px;
+      //   border: 1px solid;
+      //   border-color: #cf0;
+      //   transition: 0.2s all;
+      // }
+
+      &:disabled {
+        cursor: not-allowed;
+        display: flex;
+        padding: 12px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        align-self: stretch;
+        border-radius: 12px;
+        // background: #24333e !important;
+        background-color: #000 !important;
+        color: var(--Grey-600, #767676) !important;
+        text-align: center;
+        font-family: Pretendard700;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 24px;
+        &:hover {
+          transform: translateY(0px);
+          &::after {
+            transform: translateY(3px);
+          }
+        }
+
+        &::after {
+          display: none;
         }
       }
     }
