--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -46,16 +46,16 @@
             font-style: normal;
             line-height: 22px;
           }
-          &::after {
-            position: absolute;
-            content: '';
-            width: 5px;
-            height: 5px;
-            top: -2px;
-            left: -4px;
-            background-color: #cf0;
-            border-radius: 100%;
-          }
+          // &::after {
+          //   position: absolute;
+          //   content: '';
+          //   width: 5px;
+          //   height: 5px;
+          //   top: -2px;
+          //   left: -4px;
+          //   background-color: #cf0;
+          //   border-radius: 100%;
+          // }
         }
       }
     }
@@ -108,16 +108,16 @@
           font-style: normal;
           line-height: 24px;
         }
-        &::after {
-          position: absolute;
-          content: '';
-          width: 5px;
-          height: 5px;
-          top: -2px;
-          left: -4px;
-          background-color: #cf0;
-          border-radius: 100%;
-        }
+        // &::after {
+        //   position: absolute;
+        //   content: '';
+        //   width: 5px;
+        //   height: 5px;
+        //   top: -2px;
+        //   left: -4px;
+        //   background-color: #cf0;
+        //   border-radius: 100%;
+        // }
       }
 
       .tag-select-title__dropdown-toggle {
