--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -6,17 +6,12 @@ $input-bg: #323232;
 $text-color: #ffffff;
 $shadow-color: rgba(0, 0, 0, 0.3);
 
-.chatbot__background {
-  // display: flex;
-  // max-width: 1220px;
-  // height: 1006px;
+.chatbot__background,
+.create__lyric-lab {
   // width: 100%;
   // height: 100%;
-  // padding: 40px 30px;
-  // flex-direction: column;
-  // gap: 24px;
-  // align-items: flex-start;
-  // flex: 1 0 0;
+  max-width: 1220px;
+  max-height: 1006px;
   display: flex;
   padding: 40px 30px;
   flex-direction: column;
@@ -24,6 +19,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
   gap: 24px;
   flex: 1 0 0;
   align-self: stretch;
+  min-height: 0;
+
+  .generated-lyrics__download-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+  }
 
   .chatbot {
     // flex: 1 0 0;
@@ -32,7 +36,9 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     // border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
     display: flex;
     height: 100%;
-    padding: 24px 30px;
+    max-height: 846px;
+    min-height: 0 !important;
+    padding: 24px 30px 0px 30px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -40,6 +46,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     align-self: stretch;
     border-radius: 20px;
     border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+    position: relative;
+    overflow: hidden;
     // &__header {
     //   padding: 20px;
     //   // background-color: $background-dark;
@@ -66,12 +74,13 @@ $shadow-color: rgba(0, 0, 0, 0.3);
 
     &__messages {
       display: flex;
-      flex: 1;
+      flex: 1 1 auto;
       flex-direction: column;
       align-items: flex-start;
       gap: 12px;
       align-self: stretch;
-      overflow-y: auto;
+      overflow: scroll !important;
+      padding-bottom: 80px;
       min-height: 0;
       scrollbar-width: none; /* Firefox */
       -ms-overflow-style: none; /* IE 10+ */
@@ -255,7 +264,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     }
     &__textarea {
       display: flex;
-      width: 100%;
+      // width: 100%;
       height: 54px;
       padding: 12px 20px;
       justify-content: space-between;
@@ -266,6 +275,19 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
       background: var(--Black-10, rgba(0, 0, 0, 0.1));
       backdrop-filter: blur(20px);
+
+      position: absolute; /* ③ 항상 하단 고정 */
+      left: 30px; /* .chatbot 내부 padding 값과 동일하게 */
+      right: 30px;
+      bottom: 24px; /* .chatbot 내부 padding 값과 동일하게 */
+      width: auto; /* 양쪽 여백 감안해 자동 계산 */
+
+      pointer-events: none;
+      textarea,
+      .send-icon {
+        pointer-events: auto;
+      }
+
       .send-icon {
         transition: opacity 0.2s ease;
         &.active {
