하늘 fix: i18n제외하고 적용완료

--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -11,7 +11,7 @@
       flex-direction: column;
       gap: 24px;
       align-items: flex-start;
-      flex: 1 0 0;
+      // flex: 1 0 0;
       align-self: stretch;
       .tag-select-title {
         display: flex;
