--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -6,6 +6,15 @@
   * {
     box-sizing: border-box;
   }
+  .chatbot-mode {
+    height: 816px;
+    overflow: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+    &::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Edge */
+    }
+  }
 
   .title {
     color: #cf0;
