--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -33,6 +33,10 @@
     }
   }
 
+  .create__get-started--media-title {
+    display: none;
+  }
+
   .create__get-started--features {
     margin-bottom: 40px;
     &.sequence {
@@ -218,6 +222,7 @@
   }
 }
 .create__get-started--version {
+  width: 100%;
   &.active {
     .create__get-started--version__select__title {
       border: 1px solid #fff !important;
@@ -255,8 +260,9 @@
   } //create__get-started--version__title--END--
   .create__get-started--version__select {
     position: relative;
-    width: 290px;
+    width: 100%;
     .create__get-started--version__select__title {
+      width: 100%;
       border-radius: 40px;
       border: 1px solid rgba(255, 255, 255, 0.2);
       background: rgba(0, 0, 0, 0.7);
@@ -365,6 +371,8 @@
     line-height: 30px;
   }
   .create__get-started--format-item-group {
+    width: 100%;
+    max-width: 1160px;
     display: flex;
     gap: 30px;
     .create__get-started--format-item {
@@ -382,7 +390,6 @@
       background: linear-gradient(270deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
       cursor: pointer;
       position: relative;
-      padding-top: 50px; // 아이콘 들어갈 여백
       overflow: hidden;
       &.active {
         border: 1px solid #fff;
@@ -534,9 +541,14 @@
   .created__get-started--radio-box-group {
     display: flex;
     gap: 30px;
+    width: 100%;
+    max-width: 1160px;
+
     .created__get-started--privacy,
     .created__get-started--creation-mode,
     .created__get-started--version {
+      flex: 1 1 0;
+      min-width: 0;
       h3 {
         color: #f1f1f1;
         font-family: Pretendard600;
@@ -561,10 +573,9 @@
       .creation-mode-options,
       .version-mode-options {
         display: flex;
-        width: 366.66px;
+        width: 100%;
         height: 186px;
-        max-width: 500px;
-        padding: 30px 80px;
+        padding: 30px;
         flex-direction: column;
         align-items: center;
         gap: 24px;
@@ -578,6 +589,7 @@
           flex-direction: column;
           align-items: center;
           gap: 12px;
+          width: 100%;
           img {
             width: 24px;
             height: 24px;
@@ -616,8 +628,8 @@
 
           input[type='radio'] {
             appearance: none;
-            width: 20px;
-            height: 20px;
+            width: 22px;
+            height: 22px;
             border: 2px solid #ccc;
             border-radius: 50%;
             outline: none;
@@ -707,7 +719,7 @@
 // }
 @media screen and (max-width: 1228px) {
   .create__get-started {
-    padding: 0px 30px 64px;
+    // padding: 0px 30px 64px;
 
     .create__get-started--radio-box {
       flex-direction: column;
@@ -758,11 +770,41 @@
 
 @media screen and (max-width: 768px) {
   .create__get-started {
-    padding: 0px 30px 64px;
-    margin-top: 32px;
-
+    padding: 0;
+    gap: 12px;
+    .create__get-started--title--section {
+      display: none;
+    }
+    .create__get-started--media-title {
+      display: block;
+      width: 100%;
+      height: 48px;
+      padding: 12px 16px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 24px;
+      border-bottom: 1px solid var(--Grey-800, #303030);
+      &--group {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        img {
+          width: 24px;
+          height: 24px;
+          transform: rotate(180deg);
+          aspect-ratio: 1/1;
+        }
+        p {
+          color: var(--White, #fff);
+          font-family: Pretendard700;
+          font-size: 14px;
+          font-style: normal;
+          line-height: 22px; /* 157.143% */
+        }
+      }
+    }
     .create__get-started--title {
-      font-size: 28px;
     }
 
     .create__get-started--subtitle {
@@ -770,10 +812,17 @@
     }
 
     .create__get-started--radio-box {
-      margin: 20px 0;
+      margin: 24px 0;
       flex-direction: column;
-      gap: 16px;
+      gap: 12px;
 
+      .create__get-started--radio-box--title {
+        color: var(--White, #fff);
+        font-family: Pretendard700;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 22px;
+      }
       .created__get-started--radio-box-group {
         flex-direction: column;
         gap: 16px;
@@ -784,6 +833,102 @@
           width: 100%;
           padding: 0;
           box-sizing: border-box;
+          display: flex;
+        }
+        .creation-mode-options,
+        .version-mode-options {
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+          height: auto;
+          padding: 20px !important;
+          justify-content: space-between;
+          align-items: center;
+          align-self: stretch;
+          border-radius: 12px;
+          border: 1px solid var(--White-10, rgba(255, 255, 255, 0.1));
+          background: var(--White-05, rgba(255, 255, 255, 0.05));
+
+          .creation-mode-title,
+          .version-mode-title {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4px;
+
+            img {
+              width: 20px;
+              height: 20px;
+            }
+            p {
+              color: #fff;
+              font-family: Pretendard700;
+              font-size: 14px;
+              font-style: normal;
+              line-height: 28px;
+            }
+          }
+          font {
+            color: inherit !important;
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            letter-spacing: inherit !important;
+            word-spacing: inherit !important;
+            font-variant: inherit !important;
+            text-transform: inherit !important;
+            text-rendering: inherit !important;
+            -webkit-font-smoothing: inherit !important;
+          }
+        }
+
+        .privacy-option-group {
+          display: flex;
+          gap: 8px;
+          .privacy-option {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+
+            input[type='radio'] {
+              appearance: none;
+              width: 22px;
+              height: 22px;
+              border: 2px solid #ccc;
+              border-radius: 50%;
+              outline: none;
+              cursor: pointer;
+              position: relative;
+              padding: 0;
+
+              &:checked {
+                border-color: #fff;
+
+                &::after {
+                  content: '';
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  transform: translate(-50%, -50%);
+                  width: 10px;
+                  height: 10px;
+                  background-color: #fff;
+                  border-radius: 50%;
+                }
+              }
+            }
+
+            label {
+              color: var(--White, #fff);
+              font-family: Pretendard400;
+              font-size: 14px;
+              font-style: normal;
+              line-height: 22px;
+              cursor: pointer;
+            }
+          }
         }
       }
     }
@@ -817,5 +962,16 @@
         width: 100%;
       }
     }
+  }
+}
+
+@media screen and (max-width: 560px) {
+  /* active 여부와 관계없이 아이콘 크기를 100 × 100 으로 */
+  .create__get-started--format-item .create__get-started--format-item-icon,
+  .create__get-started--format-item.active .create__get-started--format-item-icon {
+    width: 100px !important;
+    height: 100px !important;
+    // top: -24px;
+    // right: 16px;
   }
 }
