--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -8,8 +8,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
 
 .chatbot__background,
 .create__lyric-lab {
-  // width: 100%;
-  // height: 100%;
   max-width: 1220px;
   max-height: 1006px;
   display: flex;
@@ -30,15 +28,11 @@ $shadow-color: rgba(0, 0, 0, 0.3);
   }
 
   .chatbot {
-    // flex: 1 0 0;
-    // align-self: stretch;
-    // border-radius: 20px;
-    // border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
     display: flex;
     height: 100%;
     max-height: 846px;
     min-height: 0 !important;
-    padding: 24px 30px 0px 30px;
+    padding: 24px 30px 100px 30px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -47,42 +41,19 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
     position: relative;
-    overflow: hidden;
-    // &__header {
-    //   padding: 20px;
-    //   // background-color: $background-dark;
-    //   text-align: center;
-    //   h2 {
-    //     margin: 0;
-    //     font-weight: 600;
-    //     color: $text-color;
-    //     text-align: left;
-    //     color: #cf0;
-    //     font-family: Pretendard400;
-    //     font-size: 18px;
-    //     font {
-    //       font-family: inherit !important;
-    //       font-size: inherit !important;
-    //       font-weight: inherit !important;
-    //       line-height: inherit !important;
-    //       font-style: inherit !important;
-    //       color: inherit !important;
-    //       letter-spacing: inherit !important;
-    //     }
-    //   }
-    // }
+    overflow: visible;
 
     &__messages {
+      height: auto !important;
+      max-height: none !important;
       display: flex;
       flex: 1 1 auto;
-      height: 100%;
-      max-height: 100%;
       flex-direction: column;
       align-items: flex-start;
       gap: 12px;
       align-self: stretch;
-      padding-bottom: 80px;
       min-height: 0;
+
       font {
         font-family: inherit !important;
         font-size: inherit !important;
@@ -93,12 +64,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         letter-spacing: inherit !important;
       }
       .message {
-        // max-width: 100%;
-        // padding: 12px;
-        // border-radius: 10px;
-        // font-size: 14px;
-        // word-wrap: break-word;
-        // transition: background-color 0.3s ease;
         font {
           font-family: inherit !important;
           font-size: inherit !important;
@@ -110,27 +75,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         }
         &.user {
           align-self: flex-end;
-          // background-color: $primary;
-          // color: $text-color;
           .message__content {
-            // display: flex;
-            // flex-direction: row-reverse;
-            // width: 100%;
-            // align-items: center;
-            // gap: 8px;
-
-            // img {
-            //   width: 40px;
-            //   height: 40px;
-            //   border-radius: 100%;
-            // }
             .message__content--text {
-              // border-radius: 8px;
-              // background: #cf0;
-              // color: #1a1a1a;
-              // font-family: Pretendard400;
-              // font-size: 14px;
-              // padding: 12px;
               display: flex;
               padding: 12px 20px;
               align-items: flex-start;
@@ -157,10 +103,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         }
 
         &.assistant {
-          // align-self: flex-start;
-          // background-color: rgba(255, 255, 255, 0.1);
-          // border: 1px solid rgba(255, 255, 255, 0.2);
-          // color: $text-color;
           .message__content {
             display: flex;
             align-items: flex-start;
@@ -184,12 +126,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
               }
             }
             .message__content--text {
-              // border-radius: 8px;
-              // background: #1a1a1a;
-              // color: #f1f1f1;
-              // font-family: Pretendard400;
-              // font-size: 14px;
-              // padding: 12px;
               white-space: break-spaces;
               display: flex;
               padding: 12px 20px;
@@ -218,46 +154,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       }
     }
 
-    &__input {
-      // display: flex;
-      // padding: 12px;
-      // background-color: $background-dark;
-      // align-items: center;
-      // border-radius: 12px;
-      // border: 1px solid #cf0;
-      // background: #0b0b0c;
-      display: flex;
-      height: 54px;
-      padding: 12px 20px;
-      justify-content: space-between;
-      align-items: center;
-      align-self: stretch;
-
-      color: var(--Grey-600, #767676);
-      font-family: Pretendard400;
-      font-size: 14px;
-      font-style: normal;
-      line-height: 22px;
-      font {
-        font-family: inherit !important;
-        font-size: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-        font-style: inherit !important;
-        color: inherit !important;
-        letter-spacing: inherit !important;
-      }
-      input {
-        flex: 1;
-        // padding: 10px 12px;
-        border: none;
-        // border-radius: 8px;
-        font-size: 14px;
-        // background-color: $input-bg;
-        color: #fff;
-        outline: none;
-      }
-    }
     &__textarea {
       display: flex;
       // width: 100%;
@@ -342,53 +238,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         }
       }
     }
-
-    // &__button {
-    //   font {
-    //     font-family: inherit !important;
-    //     font-size: inherit !important;
-    //     font-weight: inherit !important;
-    //     line-height: inherit !important;
-    //     font-style: inherit !important;
-    //     color: inherit !important;
-    //     letter-spacing: inherit !important;
-    //   }
-    //   width: 100px;
-    //   height: 30px;
-    //   background: #cf0;
-    //   transition: 0.2s;
-    //   color: #1a1a1a;
-    //   font-family: Pretendard600;
-    //   font-size: 12px;
-    //   font-style: normal;
-    //   line-height: normal;
-    //   border-radius: 8px;
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: center;
-    //   position: relative;
-    //   margin-top: 16px;
-    //   margin-left: auto;
-    //   transition: 0.2s all;
-    //   top: 0px;
-    //   &::before {
-    //     content: '';
-    //     position: absolute;
-    //     left: 0;
-    //     top: 4px;
-    //     width: calc(100% - 2px);
-    //     transition: 0.2s all;
-    //     border-radius: 8px;
-    //     height: 29px;
-    //     border: 1px solid #cf0;
-    //   }
-    //   &:hover {
-    //     top: 4px;
-    //     &::before {
-    //       top: 0;
-    //     }
-    //   }
-    // }
   }
 
   .create__btn {
@@ -412,28 +261,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       font-size: 16px;
       font-style: normal;
       line-height: 24px;
-
-      // &:hover {
-      //   transform: translateY(5px);
-      //   &::after {
-      //     transform: translateY(0px);
-      //   }
-      // }
-
-      // &::after {
-      //   content: '';
-      //   position: absolute;
-      //   width: 100%;
-      //   height: 100%;
-      //   box-sizing: border-box;
-      //   top: 0;
-      //   left: 0;
-      //   transform: translateY(5px);
-      //   border-radius: 12px;
-      //   border: 1px solid;
-      //   border-color: #cf0;
-      //   transition: 0.2s all;
-      // }
 
       &:disabled {
         cursor: not-allowed;
