--- a/src/styles/Create.scss
+++ b/src/styles/Create.scss
@@ -8,7 +8,7 @@
   }
   .chatbot-mode {
     height: 816px;
-    overflow: scroll;
+    overflow-y: auto; /* 가로 스크롤 방지용으로 auto 권장 */
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE 10+ */
     &::-webkit-scrollbar {
@@ -474,10 +474,11 @@
     }
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .music_create {
+    display: flex;
+    flex-direction: column-reverse;
     .selected-wrap {
-      flex-direction: column-reverse;
       .button-wrap__left {
         button {
           width: 100%;
