--- a/src/components/LyricsModal.scss
+++ b/src/components/LyricsModal.scss
@@ -13,9 +13,11 @@
   }
 
   &__box {
-    width: 560px;
+    width: 100%;
+    max-width: 560px;
     max-height: 80vh;
-    padding: 30px;
+    padding: 20px;
+    margin: 20px;
     border-radius: 24px;
     background: #181818;
     border: 1px solid rgba(255, 255, 255, 0.05);
@@ -110,6 +112,17 @@
       cursor: pointer;
       pointer-events: auto;
       font-family: Pretendard700;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lyrics-modal {
+    &__title {
+      color: #fff;
+      font-family: Pretendard700;
+      font-size: 16px;
+      line-height: 24px;
     }
   }
 }
