--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -343,7 +343,7 @@
 
   display: flex;
   flex-direction: column;
-  margin-bottom: 16px;
+  // margin-bottom: 16px;
   label {
     color: #aaa;
     font-family: Pretendard400;
@@ -585,14 +585,15 @@
         background: var(--White-05, rgba(255, 255, 255, 0.05));
         .creation-mode-title,
         .version-mode-title {
+          width: auto;
           display: flex;
           flex-direction: column;
           align-items: center;
           gap: 12px;
           width: 100%;
           img {
-            width: 24px;
-            height: 24px;
+            min-width: 24px;
+            min-height: 24px;
           }
           p {
             color: #fff;
@@ -771,15 +772,39 @@
 @media screen and (max-width: 768px) {
   .create__get-started {
     padding: 0;
-    gap: 12px;
+    gap: 24px;
     .create__get-started--title--section {
-      display: none;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 4px;
+      .create__get-started--title {
+        color: var(--white, #fff);
+        font-family: Pretendard700;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 24px; /* 150% */
+        font {
+          color: inherit !important;
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          letter-spacing: inherit !important;
+          word-spacing: inherit !important;
+          font-variant: inherit !important;
+          text-transform: inherit !important;
+          text-rendering: inherit !important;
+          -webkit-font-smoothing: inherit !important;
+        }
+      }
     }
     .create__get-started--media-title {
       display: block;
       width: 100%;
       height: 48px;
-      padding: 12px 16px;
+      padding: 12px 0px 12px 0px;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
@@ -790,8 +815,8 @@
         align-items: center;
         gap: 8px;
         img {
-          width: 24px;
-          height: 24px;
+          width: 22px;
+          height: 22px;
           transform: rotate(180deg);
           aspect-ratio: 1/1;
         }
@@ -812,7 +837,6 @@
     }
 
     .create__get-started--radio-box {
-      margin: 24px 0;
       flex-direction: column;
       gap: 12px;
 
@@ -825,7 +849,7 @@
       }
       .created__get-started--radio-box-group {
         flex-direction: column;
-        gap: 16px;
+        gap: 12px;
 
         .created__get-started--privacy,
         .created__get-started--creation-mode,
@@ -838,9 +862,9 @@
         .creation-mode-options,
         .version-mode-options {
           display: flex;
-          flex-direction: row;
           width: 100%;
           height: auto;
+          min-height: 132px;
           padding: 20px !important;
           justify-content: space-between;
           align-items: center;
@@ -851,8 +875,10 @@
 
           .creation-mode-title,
           .version-mode-title {
+            width: auto;
             display: flex;
             flex-direction: row;
+            justify-content: center;
             align-items: center;
             gap: 4px;
 
@@ -861,6 +887,7 @@
               height: 20px;
             }
             p {
+              width: auto;
               color: #fff;
               font-family: Pretendard700;
               font-size: 14px;
@@ -886,16 +913,17 @@
 
         .privacy-option-group {
           display: flex;
-          gap: 8px;
+          gap: 30px;
           .privacy-option {
+            width: auto;
             display: flex;
             align-items: center;
             gap: 8px;
 
             input[type='radio'] {
               appearance: none;
-              width: 22px;
-              height: 22px;
+              min-width: 22px;
+              min-height: 22px;
               border: 2px solid #ccc;
               border-radius: 50%;
               outline: none;
@@ -921,6 +949,9 @@
             }
 
             label {
+              width: auto;
+              display: block; /* 또는 inline-block */
+              white-space: nowrap;
               color: var(--White, #fff);
               font-family: Pretendard400;
               font-size: 14px;
@@ -936,15 +967,77 @@
     .create__get-started--format {
       width: 100%;
       padding: 0;
+      &-title {
+        color: var(--White, #fff);
+        font-family: Pretendard700;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 22px; /* 157.143% */
+      }
       .create__get-started--format-item-group {
         flex-direction: column;
-        gap: 16px;
+        gap: 12px;
         width: 100%;
 
         .create__get-started--format-item {
           width: 100%;
-          padding: 30px;
-          box-sizing: border-box;
+          min-height: 106px;
+          display: flex;
+          padding: 20px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          gap: 8px;
+          align-self: stretch;
+          position: relative;
+
+          &.active {
+            &-icon {
+              position: absolute;
+              width: 100px !important;
+              height: 100px !important;
+              aspect-ratio: 1/1;
+              right: 0px !important;
+              transform: translate(-10px, 10px) !important; // → 왼쪽/아래로 이동
+              transition: all 0.3s ease;
+            }
+            &-title {
+              color: #fff;
+              font-family: Pretendard700;
+              font-size: 14px !important;
+              font-style: normal;
+              line-height: 22px !important; /* 157.143% */
+            }
+            &-txt {
+              color: var(--Grey-600, #767676);
+              font-family: Pretendard400;
+              font-size: 12px !important;
+              font-style: normal;
+              line-height: 18px !important; /* 150% */
+            }
+          }
+          &-icon {
+            width: 100px !important;
+            height: 100px !important;
+            aspect-ratio: 1/1;
+            position: absolute !important;
+            right: 16px !important; // 필요 시 조정
+            top: -10px !important; // ⬅️ 기존과 유사하게
+          }
+          &-title {
+            color: #fff;
+            font-family: Pretendard700;
+            font-size: 14px !important;
+            font-style: normal;
+            line-height: 22px !important; /* 157.143% */
+          }
+          &-txt {
+            color: var(--Grey-600, #767676);
+            font-family: Pretendard400;
+            font-size: 12px !important;
+            font-style: normal;
+            line-height: 18px !important; /* 150% */
+          }
         }
       }
     }
@@ -955,6 +1048,20 @@
 
       .create__get-started--button {
         width: 100%;
+        color: var(--White, #000000);
+        text-align: center;
+        font-family: Pretendard700;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 22px; /* 157.143% */
+        &:disabled {
+          color: var(--Grey-600, #767676) !important;
+          text-align: center;
+          font-family: Pretendard700;
+          font-size: 14px;
+          font-style: normal;
+          line-height: 22px; /* 157.143% */
+        }
       }
 
       .tw-connect-wallet {
@@ -962,16 +1069,5 @@
         width: 100%;
       }
     }
-  }
-}
-
-@media screen and (max-width: 560px) {
-  /* active 여부와 관계없이 아이콘 크기를 100 × 100 으로 */
-  .create__get-started--format-item .create__get-started--format-item-icon,
-  .create__get-started--format-item.active .create__get-started--format-item-icon {
-    width: 100px !important;
-    height: 100px !important;
-    // top: -24px;
-    // right: 16px;
   }
 }
