--- a/src/components/unit/RemainCountButton.scss
+++ b/src/components/unit/RemainCountButton.scss
@@ -27,3 +27,35 @@
     -webkit-font-smoothing: inherit !important;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .create__get-started--left-count {
+    color: var(--Grey-600, #767676);
+    font-family: Pretendard400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 22px; /* 157.143% */
+    span {
+      // color: #48b3ff;
+      color: #cf0;
+      font-family: Pretendard700;
+      font-size: 14px;
+      font-style: normal;
+      line-height: 22px;
+    }
+    font {
+      color: inherit !important;
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      letter-spacing: inherit !important;
+      word-spacing: inherit !important;
+      font-variant: inherit !important;
+      text-transform: inherit !important;
+      text-rendering: inherit !important;
+      -webkit-font-smoothing: inherit !important;
+    }
+  }
+}
