--- a/src/components/create/CreateSideBar.scss
+++ b/src/components/create/CreateSideBar.scss
@@ -99,8 +99,15 @@
   opacity: 0.3;
 }
 
+.create__sidebar--item.lyrics.disabled {
+  cursor: default;
+  pointer-events: none; /* ✔️ JS 가드와 이중 안전망 */
+  background-color: #181818 !important;
+}
+
 @media screen and (max-width: 1200px) {
   .create__sidebar {
+    // position: fixed;
     width: 100%;
     min-height: auto;
     padding: 0;
@@ -157,6 +164,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          position: relative;
 
           img {
             width: 16px;
@@ -166,6 +174,10 @@
           &.active {
             border: 2px solid rgba(255, 255, 255, 0.2);
           }
+
+          &:not(.active) img {
+            opacity: 0.3;
+          }
         }
 
         .step-line {
@@ -174,6 +186,54 @@
           background: rgba(255, 255, 255, 0.2);
         }
       }
+    }
+    /* 가사보기(모바일) */
+    .mobile-lyrics-btn {
+      position: absolute;
+      /* ① 오른쪽 step-icon 묶음과 맞추고 싶다면 right 값만 조정 */
+      right: 14px; // header padding 과 동일
+      top: 50px; // 하단에서 32 px
+      z-index: 2; // 최상단에 띄우기
+
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 8px 20px;
+
+      border-radius: 40px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(0, 0, 0, 0.7);
+
+      color: #fff;
+      font-family: Pretendard700;
+      font-size: 12px;
+      line-height: 18px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .create__sidebar {
+    .mobile-lyrics-btn {
+      position: absolute;
+      /* ① 오른쪽 step-icon 묶음과 맞추고 싶다면 right 값만 조정 */
+      right: 14px; // header padding 과 동일
+      top: 84px; // 하단에서 32 px
+      z-index: 2; // 최상단에 띄우기
+
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 8px 20px;
+
+      border-radius: 40px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(0, 0, 0, 0.7);
+
+      color: #fff;
+      font-family: Pretendard700;
+      font-size: 12px;
+      line-height: 18px;
     }
   }
 }
